--- a/nam/ridge_regression.ipynb
+++ b/nam/ridge_regression.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "8006cea6",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
     "param_grid = {'alpha': alphas}\n",
     "\n",
     "# Perform grid search with cross-validation\n",
-    "grid_search = GridSearchCV(ridge, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search = GridSearchCV(ridge, param_grid, cv=5, scoring='mean_squared_error')\n",
     "grid_search.fit(X_train, Y_train)\n",
     "\n",
     "# Get the best alpha and corresponding mean squared error\n",
