--- a/nam/lasso_regression.ipynb
+++ b/nam/lasso_regression.ipynb
@@ -577,10 +577,10 @@
    ],
    "source": [
     "# Scatter plot for Y_test (green)\n",
-    "plt.scatter(Y_test, Y_test, c='green', marker='o', label='True Value', alpha=0.7)\n",
+    "plt.scatter(Y_test, Y_test, c='green', marker='o', label='Predicted Value', alpha=0.7)\n",
     "\n",
     "# Scatter plot for Y_pred (red)\n",
-    "plt.scatter(Y_test, Y_pred, c='red', marker='x', label='Predicted Value', alpha=0.7)\n",
+    "plt.scatter(Y_test, Y_pred, c='red', marker='x', label='Actual Value', alpha=0.7)\n",
     "\n",
     "# Add labels and title\n",
     "plt.xlabel(\"True Value\", fontsize=12)\n",
