--- a/nam/ridge_regression.ipynb
+++ b/nam/ridge_regression.ipynb
@@ -427,8 +427,8 @@
     "print(pred_table)\n",
     "\n",
     "# Scatter plot for true vs predicted values\n",
-    "plt.scatter(Y_test, Y_test, c='green', marker='o', label='True Value', alpha=0.7)\n",
-    "plt.scatter(Y_test, Y_pred, c='red', marker='x', label='Predicted Value', alpha=0.7)\n",
+    "plt.scatter(Y_test, Y_test, c='green', marker='o', label='Predicted Value', alpha=0.7)\n",
+    "plt.scatter(Y_test, Y_pred, c='red', marker='x', label='Actual Value', alpha=0.7)\n",
     "plt.xlabel(\"True Value\", fontsize=12)\n",
     "plt.ylabel(\"Predicted Value\", fontsize=12)\n",
     "plt.title(\"True Value vs. Predicted Value: Ridge Regression\", fontsize=14)\n",
