New processed data

--- a/notebooks/RandomForest/RandomForest_2.ipynb
+++ b/notebooks/RandomForest/RandomForest_2.ipynb
@@ -415,6 +415,31 @@
    "execution_count": 70
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Assuming you have obtained Y_pred and Y_test from your model\n",
+    "\n",
+    "# Create a scatter plot or line plot\n",
+    "# Scatter plot for Y_test (green)\n",
+    "plt.scatter(Y_test, Y_test, c='green', marker='o', label='True Value', alpha=0.7)\n",
+    "\n",
+    "# Scatter plot for Y_pred (red)\n",
+    "plt.scatter(Y_test, Y_pred, c='red', marker='x', label='Predicted Value', alpha=0.7)\n",
+    "plt.plot([Y_test.min(), Y_test.max()], [Y_test.min(), Y_test.max()], 'r--')  # Diagonal line for reference\n",
+    "plt.xlabel('Actual Values (Y_test)')\n",
+    "plt.ylabel('Predicted Values (Y_pred)')\n",
+    "plt.legend(fontsize=12)\n",
+    "plt.title('Actual vs. Predicted House Prices using Random Forest Regressor')\n",
+    "plt.grid(alpha=0.4)\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ],
+   "id": "db1871a48788497d"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T15:49:06.597353Z",
@@ -599,13 +624,10 @@
     "from sklearn.metrics import r2_score\n",
     "#Test the model\n",
     "pred_train = loaded_model.predict(X_train)\n",
-    "pred_val = loaded_model.predict(X_val)\n",
     "pred_test = loaded_model.predict(X_test)\n",
     "train_accuracy = r2_score(pred_train, Y_train)\n",
-    "val_accuracy = r2_score(pred_val, Y_val)\n",
     "test_accuracy = r2_score(pred_test, Y_test)\n",
     "print('Training r2 score: ',train_accuracy)\n",
-    "print('Validation r2 score: ', val_accuracy)\n",
     "print('Test r2 score: ',test_accuracy)"
    ],
    "id": "25641b90fbbfcb23",
@@ -633,10 +655,8 @@
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "mse_train = mean_squared_error(Y_train, pred_train)\n",
-    "mse_val = mean_squared_error(Y_val, pred_val)\n",
     "mse_test = mean_squared_error(Y_test, pred_test)\n",
     "print('Training mean squared error: ', mse_train)\n",
-    "print('Validation mean squared error: ', mse_val)\n",
     "print('Test mean squared error: ', mse_test)"
    ],
    "id": "d84dec3e2610031b",
@@ -664,10 +684,8 @@
    "source": [
     "from sklearn.metrics import mean_absolute_error\n",
     "mae_train = mean_absolute_error(Y_train, pred_train)\n",
-    "mae_val = mean_absolute_error(Y_val, pred_val)\n",
     "mae_test = mean_absolute_error(Y_test, pred_test)\n",
     "print('Training mean absolute error: ', mae_train)\n",
-    "print('Validation mean absolute error: ', mae_val)\n",
     "print('Test mean absolute error: ', mae_test)"
    ],
    "id": "2a6ce0e7e7c49d63",
