--- a/notebooks/RandomForest/RandomForest_2.ipynb
+++ b/notebooks/RandomForest/RandomForest_2.ipynb
@@ -1007,7 +1007,7 @@
     "plt.title('Actual vs. Predicted House Prices using Random Forest Regressor')\n",
     "plt.grid(alpha=0.4)\n",
     "# Show the plot\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "id": "2e67c755e27f0cf4",
    "outputs": [
