--- a/notebooks/RandomForest/RandomForest_2.ipynb
+++ b/notebooks/RandomForest/RandomForest_2.ipynb
@@ -5,9 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-05-31T08:47:28.127382Z",
-     "start_time": "2024-05-31T08:47:27.827728Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -20,7 +19,7 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {
@@ -226,7 +225,7 @@
     "    pickle.dump(best_model, open(model_name, 'wb'))\n",
     "    return best_model\n",
     "\n",
-    "model = hypersearch(RandomForestRegressor(random_state=42), model_file, param_grid, X_train, Y_train)"
+    "model = hypersearch(RandomForestRegressor(n_estimators=10, random_state=42), model_file, param_grid, X_train, Y_train)"
    ],
    "id": "3762530256028aba",
    "outputs": [
